[project]
name = "blender-api-extractor"
version = "0.1.0"
description = "Dynamic 3D Asset Generation with Blender API Extraction and MCP Server"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rapidfuzz>=3.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
mcp = [
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
]
vector = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
parse-blender-api = "blender_api_parser:main"
