[project]
name = "3d-asset-generator"
version = "1.0.0"
description = "AI-Powered 3D Asset Generation with Multi-Agent Blender Automation"
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    
    # Existing project dependencies
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rapidfuzz>=3.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    
    # System monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "aiohttp>=3.8.0",  # For testing
]
mcp = [
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "fastmcp>=0.1.0",
]
vector = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
parse-blender-api = "blender_api_parser:main"
